<resources>
    <string name="app_name">Easy Cloud</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_trash">View Trash</string>
    <string name="action_web_login">Web Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Dashboard</string>
    <string name="tab_text_2">Chats</string>
    <string name="tab_text_3">Contacts</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="title_activity_share_to_contacts">ShareToContactsActivity</string>
    <string name="title_activity_view_folder">ViewFolderActivity</string>
    <string name="title_activity_qr_code_scanner">QrCodeScannerActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_view_video">ViewVideoActivity</string>
</resources>
